--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
   <h1>Disco Time!</h1>
   <button id="start">Start Disco</button>
   <button id="stop">Stop Disco</button>
+  <button id="test">test</button>
   <audio id="discoMusic" src="assets/disco.mp3"></audio>
   <script src="popup.js"></script>
 </body>
